# platformer_2d

./: CMakeLists.txt  build.sh  main.cpp  reflexrift_editor.html  tile_test.cpp
assets/: map.json  map_2.json  map_3.json
assets/map/: map.json
include/: camera.hpp  config.hpp  entity.hpp  game.hpp  input_handler.hpp  logger.hpp  player.hpp  renderer.hpp  sdl_context.hpp  sdl_deleter.hpp  sprite.hpp  spritesheet.hpp  tile.hpp  tilemap.hpp  utils.hpp  vector2f.hpp
src/: camera.cpp  entity.cpp  game.cpp  input_handler.cpp  logger.cpp  player.cpp  renderer.cpp  sdl_context.cpp  spritesheet.cpp  tile.cpp  tilemap.cpp  utils.cpp  vector2f.cpp
